Prevent widgets jumping on chat enable/disable

--- a/static/site.css
+++ b/static/site.css
@@ -1341,7 +1341,7 @@ ol#lobbychat-messages, ol#roundchat-messages {
 }
 
 ol#lobbychat-messages {
-    max-height: 536px;
+    max-height: var(--cgwrapheight);
 }
 
 ol#roundchat-messages {
